# kajiya

./: .gitignore  .mergify.yml  CONTRIBUTING.md  Cargo.toml  README.md  bake.cmd  bake.sh  build_and_run.cmd  build_and_run.sh  rustfmt.toml
.cargo/: config
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
ash-imgui/: Cargo.toml  Makefile
ash-imgui/src/: imgui.frag.spv  imgui.vert.spv  lib.rs
assets/rust-shaders/: Cargo.toml
assets/rust-shaders-compiled/: blurblur_cs  calculate_reprojection_mapcalculate_reprojection_map_cs  convolve_cubeconvolve_cube_cs  copy_depth_to_rcopy_depth_to_r_cs  extract_half_res_depthextract_half_res_depth  extract_half_res_gbuffer_view_normal_rgba8extract_half_res_gbuffer_view_normal_rgba8  motion_blurmotion_blur  motion_blurvelocity_dilate  motion_blurvelocity_reduce_x  motion_blurvelocity_reduce_y  post_combinepost_combine_cs  raster_simpleraster_simple_fs  raster_simpleraster_simple_vs  rev_blurrev_blur_cs  shaders.json  skycomp_sky_cube_cs  skyprefilter_sky_cube  ssgispatial_filter_cs  ssgissgi_cs  ssgitemporal_filter_cs  ssgiupsample_cs
assets/rust-shaders/builder/: Cargo.toml
assets/rust-shaders/builder/src/: main.rs
assets/scenes/: battle.ron  car.ron  conference.ron  cornell_box.ron  drones.ron  gas_stations.ron  mini_battle.ron  pica.ron  roughness-scale.ron  testball.ron  viziers.ron
assets/shaders/: blit_ui.hlsl  blur.hlsl  calculate_reprojection_map.hlsl  clear_luminance_histogram.hlsl  convolve_cube.hlsl  copy_color.hlsl  copy_depth_to_r.hlsl  downscale_r.hlsl  extract_half_res_depth.hlsl  extract_half_res_gbuffer_view_normal_rgba8.hlsl  extract_half_res_ssao.hlsl  final_blit.hlsl  glare.hlsl  gradients.hlsl  into_ycbcr.hlsl  light_gbuffer.hlsl  luminance_histogram.hlsl  luminance_histogram_common.hlsl  normalize_accum.hlsl  post_combine.hlsl  raster_simple_ps.hlsl  raster_simple_vs.hlsl  rev_blur.hlsl
crates/kajiya-rg/: Cargo.toml
crates/kajiya-rg/src/: pass_builder.rs  renderer.rs  resource.rs  resource_registry.rs
crates/lib/ash-egui/: Cargo.toml  Makefile  build_shaders.cmd
crates/lib/ash-egui/src/: egui.frag  egui.frag.spv  egui.vert  egui.vert.spv  lib.rs
crates/lib/kajiya/: Cargo.toml
crates/lib/kajiya-asset/: Cargo.toml
crates/lib/kajiya-asset-pipe/: Cargo.toml
crates/lib/kajiya-asset-pipe/src/: lib.rs
crates/lib/kajiya-asset/src/: image.rs  import_gltf.rs  lib.rs  mesh.rs
crates/lib/kajiya-backend/: Cargo.toml
crates/lib/kajiya-backend/src/: chunky_list.rs  dynamic_constants.rs  error.rs  file.rs  final_blit.hlsl  final_blit.spv  gpu_profiler.rs  lib.rs  pipeline_cache.rs  rust_shader_compiler.rs  shader_compiler.rs  transient_resource_cache.rs
crates/lib/kajiya-backend/src/vulkan/: barrier.rs  buffer.rs  device.rs  error.rs  image.rs  instance.rs  mod.rs  physical_device.rs  presentation.rs  profiler.rs  ray_tracing.rs  shader.rs  swapchain.rs
crates/lib/kajiya-imgui/: Cargo.toml
crates/lib/kajiya-imgui/src/: imgui_backend.rs  lib.rs
crates/lib/kajiya-rg/: Cargo.toml
crates/lib/kajiya-rg/src/: graph.rs  hl.rs  imageops.rs  lib.rs  pass_api.rs  pass_builder.rs  renderer.rs  resource.rs  resource_registry.rs  temporal.rs
crates/lib/kajiya-simple/: Cargo.toml
crates/lib/kajiya-simple/src/: input.rs  lib.rs  main_loop.rs
crates/lib/kajiya-simple/src/cameras/: first_person.rs  mod.rs
crates/lib/kajiya/src/: bindless_descriptor_set.rs  buffer_builder.rs  camera.rs  default_world_renderer.rs  frame_constants.rs  frame_desc.rs  frame_state.rs  image_cache.rs  image_lut.rs  imgui_backend.rs  imgui_renderer.rs  input.rs  lib.rs  logging.rs  lut_renderers.rs  mmap.rs  render_client.rs  render_passes.rs  ui_renderer.rs  viewport.rs  world_render_passes.rs  world_renderer.rs  world_renderer_mmap_adapter.rs
crates/lib/kajiya/src/renderers/: csgi.rs  deferred.rs  dlss.rs  dof.rs  half_res.rs  ibl.rs  ircache.rs  lighting.rs  mod.rs  motion_blur.rs  post.rs  prefix_scan.rs  raster_meshes.rs  reference.rs  reprojection.rs  rtdgi.rs  rtr.rs  shadow_denoise.rs  shadows.rs  sky.rs  ssgi.rs  surfel_gi.rs  taa.rs  ussgi.rs  wrc.rs
crates/lib/kajiya/src/renderers/old/: csgi.rs  prefix_scan.rs  sdf.rs
crates/lib/rust-shaders/: Cargo.toml
crates/lib/rust-shaders-shared/: Cargo.toml
crates/lib/rust-shaders-shared/src/: camera.rs  frame_constants.rs  gbuffer.rs  lib.rs  mesh.rs  raster_simple.rs  render_overrides.rs  ssgi.rs  util.rs  view_constants.rs  view_ray.rs
crates/lib/rust-shaders/.cargo/: config
crates/lib/rust-shaders/src/: atmosphere.rs  bilinear.rs  blur.rs  calculate_reprojection_map.rs  color.rs  constants.rs  convolve_cube.rs  copy_depth_to_r.rs  extract_half_res_depth.rs  extract_half_res_gbuffer_view_normal_rgba8.rs  gbuffer.rs  lib.rs  motion_blur.rs  pack_unpack.rs  post_combine.rs  raster_simple.rs  rev_blur.rs  sky.rs  ssgi.rs  tonemap.rs
crates/slingshot/: Cargo.toml
crates/slingshot/src/: bytes.rs  chunky_list.rs  dynamic_constants.rs  file.rs  gpu_profiler.rs  lib.rs  pipeline_cache.rs  renderer.rs  shader_compiler.rs
crates/slingshot/src/backend/: buffer.rs  device.rs  image.rs  instance.rs  mod.rs  physical_device.rs  presentation.rs  profiler.rs  ray_tracing.rs  resource_storage.rs  shader.rs  swapchain.rs
crates/slingshot/src/rg/: graph.rs  hl.rs  mod.rs  pass_api.rs  pass_builder.rs  resource.rs  resource_registry.rs  temporal.rs
docs/: gi-overview.md  rust-shaders.md  using-dlss.md  using-kajiya.md
scripts/: update_shaders_from_notorious6.cmd
src/: barrier.rs  camera.rs  chunky_list.rs  device.rs  dynamic_constants.rs  error.rs  file.rs  final_blit.hlsl  final_blit.spv  image_cache.rs  image_lut.rs  imgui_backend.rs  input.rs  instance.rs  keyboard.rs  lib.rs  logging.rs  lut_renderers.rs  main.rs  math.rs  mesh.rs  physical_device.rs  pipeline_cache.rs  presentation.rs  reel_cell.rs  render_client.rs  render_passes.rs  renderer.rs  shader_cache.rs  shader_compiler.rs  state_tracker.rs  surface.rs  swapchain.rs  temporal.rs  transient_resource_cache.rs  view_cache.rs  viewport.rs
(+396 files in other folders)
