[workspace]
members = [
    "crates/bin/bake",
    "crates/bin/hello",
    "crates/bin/view",

    "crates/lib/kajiya-asset",
    "crates/lib/kajiya-backend",
    "crates/lib/kajiya-imgui",
    "crates/lib/kajiya-rg",
    "crates/lib/kajiya-simple",
    "crates/lib/kajiya",

    "crates/lib/ash-imgui",
]

# The shaders use nightly features, and so cannot be built for the CPU on stable.
exclude = [
    "assets/rust-shaders",
    "assets/rust-shaders/builder",
]

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }

[profile.release]
debug = true

#[patch."https://github.com/h3r2tic/rspirv-reflect"]
#rspirv-reflect = { path = "../rspirv-reflect" }