[workspace]
members = [
    "crates/bin/bake",
    "crates/bin/hello",
    "crates/bin/view",

    "crates/lib/kajiya-asset",
    "crates/lib/kajiya-backend",
    "crates/lib/kajiya-egui",
    "crates/lib/kajiya-imgui",
    "crates/lib/kajiya-rg",
    "crates/lib/kajiya-simple",
    "crates/lib/kajiya",
    "crates/lib/rust-shaders",
    "crates/lib/rust-shaders-shared",

    "crates/lib/ash-egui",
    "crates/lib/ash-imgui",
]

exclude = [
    "crates/bin/rust-shader-builder",
    "crates/lib/ngx_dlss"
]

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }

[profile.release]
debug = true

#[patch."https://github.com/h3r2tic/rspirv-reflect"]
#rspirv-reflect = { path = "../rspirv-reflect" }