[workspace]
members = [
    "crates/bin/bake",
    "crates/bin/hello",
    "crates/bin/view",

    "crates/lib/kajiya-asset",
    "crates/lib/kajiya-asset-pipe",
    "crates/lib/kajiya-backend",
    "crates/lib/kajiya-imgui",
    "crates/lib/kajiya-rg",
    "crates/lib/kajiya-simple",
    "crates/lib/kajiya",
    "crates/lib/rust-shaders",
    "crates/lib/rust-shaders-shared",

    "crates/lib/ash-imgui",
]

exclude = [
    "crates/bin/rust-shader-builder",
    "crates/lib/ngx_dlss"
]

[patch.crates-io]
# Official ray-tracing extensions
rspirv = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }
spirv_headers = { git = "https://github.com/gfx-rs/rspirv.git", rev = "dae552c" }

# TODO look-at
dolly = { git = "https://github.com/h3r2tic/dolly.git", rev = "0276fb4b5fe2e11c70919af7dbbcd645711c8f48" }

[profile.release]
debug = 1

#[patch."https://github.com/h3r2tic/rspirv-reflect"]
#rspirv-reflect = { path = "../rspirv-reflect" }

#[patch."https://github.com/h3r2tic/gpu-profiler.git"]
#gpu-profiler = { path = "../gpu_profiler", features = ["use-ash"] }
