[package]
name = "kajiya-rg"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }

anyhow = "1.0"
arrayvec = "0.5"
byte-slice-cast = "0.3"
chrono = "0.4"
derive_builder = { version = "0.9", default-features = false }
fern = { version = "0.6", features = ["colored"] }
futures = "0.3"
glam = "0.12"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
raw-window-handle = "0.3"
relative-path = "1.3"
shader-prepper = "0.2"
smol = "1.2.5"
thiserror = "1.0"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }

[profile.release]
debug = true
incremental = true
lto = false

[features]
default = ["ray-tracing"]
#default = []
ray-tracing = []
