[package]
name = "slingshot"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
bincode = "1.3"
byte-slice-cast = "0.3"
ash = "0.31"
ash-window = "0.5"
chrono = "0.4"
#derive_builder = { git = "https://github.com/colin-kiegel/rust-derive-builder.git", rev = "44f629c", features = ["logging"] }   # dyn Error instead of String
derive_builder = { version = "0.9", default-features = false }
failure = "0.1.8"   # for shader-prepper: TODO: NUKE
fern = { version = "0.6", features = ["colored"] }
futures = "0.3"
glam = "0.9"
gltf = "0.15"
gpu-allocator = "0.4.0"
hassle-rs = "0.4"
hotwatch = "0.4"
lazy_static = "1.4"
log = "0.4"
# once_cell = "1.4"
parking_lot = "0.11"
raw-window-handle = "0.3"
relative-path = "1.3"
rspirv = { git = "https://github.com/Traverse-Research/rspirv.git" }
serde = { version = "1.0", features = ["derive"] }
rspirv-reflect = { git = "https://github.com/Traverse-Research/rspirv-reflect.git", rev = "1fa877bfeb6f4e3c71c3376523ceaaf8ddaee42f" }
shader-prepper = "0.2"
smol = "0.3"
thiserror = "1.0"
turbosloth = "0.2.0"
vk-sync = { git = "https://github.com/zedrian/vk-sync-rs.git", rev = "e28c05d" }
# winit = "0.21"  # 0.22 panics in NSight with this error: https://github.com/rust-windowing/winit/issues/1585
winit = "=0.19.5"

[patch.crates-io]
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git" }

[profile.release]
debug = true
incremental = true
lto = false

[features]
default = ["ray-tracing"]
#default = []
ray-tracing = []
