[package]
name = "builder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nanoserde = "0.1"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "4dcb50169f7af2d97d0b59a6bb2d1bfc2cb4cfc7" }