[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
nanoserde = "0.1"
spirv-builder = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "28313a2029aec5de7283e167ea2d67d2aa350f62" }