[package]
name = "kajiya-asset"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }
anyhow = "1.0"
byteorder = "1.4"
glam = "0.17"
gltf = { git = "https://github.com/gltf-rs/gltf.git", rev = "4298aac", features = ["KHR_texture_transform"] } # texture transform
image = { version = "0.23.13", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
