[package]
name = "kajiya-asset"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }

anyhow = "1.0"
base64 = "0.12"
byteorder = "1.4"
bytes = "1.0"
ddsfile = "0.4"
glam = "0.18"
gltf = { git = "https://github.com/h3r2tic/gltf.git", rev = "83826e3", features = ["KHR_texture_transform"] } # u8 color import fix
image = { version = "0.23.13", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
urlencoding = "2.1"