[package]
name = "kajiya-backend"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#derive_builder = { git = "https://github.com/colin-kiegel/rust-derive-builder.git", rev = "44f629c", features = ["logging"] }   # dyn Error instead of String
anyhow = "1.0"
arrayvec = "0.5"
ash = "0.32"
ash-window = "0.6"
byte-slice-cast = "0.3"
bytes = "1.0"
derive_builder = { version = "0.9", default-features = false }
failure = "0.1.8"   # for shader-prepper: TODO: NUKE
futures = "0.3"
glam = "0.17"
gpu-allocator = { version = "0.6.0", features = ["vulkan_device_address"] }
hassle-rs = "0.4"
hotwatch = "0.4"
lazy_static = "1.4"
log = "0.4"
normpath = "0.3"
parking_lot = "0.11"
raw-window-handle = "0.3"
relative-path = "1.3"
rspirv = "0.7"  # note: patched over for latest RT
rspirv-reflect = { git = "https://github.com/h3r2tic/rspirv-reflect", rev = "77364f98cbfb5c7ee3aa1347158670a9b8ec5bf5" }
shader-prepper = "0.2"
smol = "1.2.5"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
vk-sync = { git = "https://github.com/zedrian/vk-sync-rs.git", rev = "e28c05d" }

[features]
default = ["ray-tracing"]
#default = []
ray-tracing = []
dlss = []
