[package]
name = "kajiya-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arrayvec = "0.5"
ash = "0.33"
ash-window = "0.7"
backtrace = "0.3"
byte-slice-cast = "0.3"
bytes = "1.0"
derive_builder = { version = "0.9", default-features = false }
futures = "0.3"
glam = "0.18"
gpu-allocator = { git = "https://github.com/Traverse-Research/gpu-allocator.git", rev = "e66d062cbd73a6c98834fc3e3acef98318097156" }
gpu-profiler = { git = "https://github.com/h3r2tic/gpu-profiler.git", rev = "fac8dd96ceacfb69ec278c9697c3bfd2d8b8a9b7", features = ["use-ash"] }
hassle-rs = "0.10"
hotwatch = "0.4"
lazy_static = "1.4"
log = "0.4"
nanoserde = "0.1"
normpath = "0.3"
parking_lot = "0.11"
puffin = "0.11.0"
raw-window-handle = "0.3"
relative-path = "1.3"
rspirv = "0.7"  # note: patched over for latest RT
rspirv-reflect = { git = "https://github.com/h3r2tic/rspirv-reflect", rev = "77364f98cbfb5c7ee3aa1347158670a9b8ec5bf5" }
shader-prepper = "0.3.0-pre.1"
smol = "1.2.5"
thiserror = "1.0"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
vk-sync = { git = "https://github.com/h3r2tic/vk-sync-rs", rev = "cb5bbf2" }

[features]
#default = []
dlss = []
