[package]
name = "kajiya-imgui"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }

anyhow = "1.0"
ash-imgui = { path = "../ash-imgui" }
glam = "0.17"
imgui = { version = "0.7" }
imgui-winit-support = { version = "0.7" }
log = "0.4"
parking_lot = "0.11"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
winit = "0.24"
