[package]
name = "kajiya-imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya", default-features = false }

ash-imgui = { path = "../ash-imgui" }
imgui = { version = "0.7" }
imgui-winit-support = { version = "0.7", default-features = false, features = ["winit-25"] }
log = "0.4"
parking_lot = "0.11"
winit = "0.25"

[features]
default = ["ray-tracing"]
ray-tracing = ["kajiya/ray-tracing"]
