[package]
name = "kajiya-imgui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }

ash-imgui = { path = "../ash-imgui" }
imgui = { version = "0.8.2" }
imgui-winit-support = { version = "0.8.2", default-features = false, features = ["winit-26"] }
log = "0.4"
parking_lot = "0.11"
winit = "0.26.1"
