[package]
name = "kajiya-rg"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }

anyhow = "1.0"
arrayvec = "0.5"
derive_builder = { version = "0.9", default-features = false }
futures = "0.3"
glam = "0.17"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }

[features]
default = ["ray-tracing"]
#default = []
ray-tracing = []
