[package]
name = "kajiya-rg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-backend = { path = "../kajiya-backend" }

anyhow = "1.0"
arrayvec = "0.5"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
puffin = "0.11.0"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }

[features]
default = ["ray-tracing"]
#default = []
ray-tracing = []
