[package]
name = "kajiya-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya = { path = "../kajiya" }
kajiya-imgui = { path = "../kajiya-imgui", optional = true }
kajiya-egui = { path = "../kajiya-egui", optional = true }

anyhow = "1.0"
glam = { version = "0.18", features = ["serde"] }
log = "0.4"
puffin = { version = "0.11.0" }
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }
winit = "0.25"

puffin_http = { version = "0.8.0", optional = true }
imgui = { version = "0.7", optional = true }
egui = { version = "0.17.0", optional = true }

[features]
dear-imgui = [
    "imgui",
    "kajiya-imgui",
]

use-egui = [
    "egui",
    "kajiya-egui",
]

puffin-server = [
    "puffin_http",
]
