[package]
name = "kajiya"
version = "0.1.0"
authors = ["Tomasz Stachowiak <h3@h3.gd>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-asset = { path = "../kajiya-asset" }
kajiya-backend = { path = "../kajiya-backend" }
kajiya-rg = { path = "../kajiya-rg" }

anyhow = "1.0"
arrayvec = "0.5"
blue-noise-sampler = "0.1"
byte-slice-cast = "0.3"
byteorder = "1.4"
chrono = "0.4"
derive_builder = { version = "0.9", default-features = false }
failure = "0.1.8"   # for shader-prepper: TODO: NUKE
fern = { version = "0.6", features = ["colored"] }
futures = "0.3"
glam = { version = "0.17" }
hassle-rs = "0.4"
hotwatch = "0.4"
image = { version = "0.23.13", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
lazy_static = "1.4"
log = "0.4"
memmap2 = "0.2"
parking_lot = "0.11"
raw-window-handle = "0.3"
relative-path = "1.3"
ron = "0.6.2"
smol = "1.2.5"
structopt = "0.3"
thiserror = "1.0"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }

ngx_dlss = { path = "../ngx_dlss", optional = true }
wchar = "0.10"

async-channel = "1.4.2"
async-executor = "1.1.0"
easy-parallel = "3.1.0"

[features]
default = []
dlss = [ "ngx_dlss", "kajiya-backend/dlss" ]
