[package]
name = "kajiya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kajiya-asset = { path = "../kajiya-asset", default-features = false }
kajiya-backend = { path = "../kajiya-backend", default-features = false }
kajiya-rg = { path = "../kajiya-rg", default-features = false }
rust-shaders-shared = { path = "../rust-shaders-shared" }

anyhow = "1.0"
array-init = "2.0.0"
blue-noise-sampler = "0.1"
chrono = "0.4"
fern = { version = "0.6", features = ["colored"] }
glam = { version = "0.18" }
image = { version = "0.23.13", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt"] }
lazy_static = "1.4"
log = "0.4"
memmap2 = "0.2"
parking_lot = "0.11"
smol = "1.2.5"
turbosloth = { git = "https://github.com/h3r2tic/turbosloth.git", rev = "92030af" }

ngx_dlss = { path = "../ngx_dlss", optional = true }
wchar = "0.10"

easy-parallel = "3.1.0"

[features]
default = ["ray-tracing"]
ray-tracing = ["kajiya-backend/ray-tracing", "kajiya-rg/ray-tracing", "kajiya-asset/ray-tracing"]
dlss = [ "ngx_dlss", "kajiya-backend/dlss" ]
