[package]
name = "rust-shaders-shared"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
macaw = { version = "0.15", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.14", default-features = false, features = ["libm"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "b692ab5afc7fbdb4599b42ab3e0328dc7e8e0e97", features = ["glam"] }
