[package]
name = "rust-shaders-shared"
version = "0.1.0"
edition = "2021"

[lib]
test = false
doctest = false

[dependencies]
glam = { version = "0.22", default-features = false, features = ["libm"] }
macaw = { version = "0.18.6", default-features = false, features = ["libm"] }
num-traits = { version = "0.2.16", default-features = false, features = ["libm"] }

[target.'cfg(target_arch = "spirv")'.dependencies]
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "e87c324bfda6bea144fe2635586281c4ef144f0d" }
