[package]
name = "rust-shaders"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "dylib"]
test = false
doctest = false

[dependencies]
rust-shaders-shared = { path = "../rust-shaders-shared" }
spirv-std = { git = "https://github.com/EmbarkStudios/rust-gpu", rev = "b692ab5afc7fbdb4599b42ab3e0328dc7e8e0e97", features = ["glam"] }
macaw = { version = "0.15", default-features = false, features = ["libm"] }